# DeepVibe-AI-Hedge-Fund

./: .env.example  .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/deepvibe_hedge/: __init__.py  alpaca_asset.py  alpaca_bar_adjustment.py  alpaca_fetcher.py  alpaca_live.py  breakout_plotting.py  config.py  data_splitter.py  nasdaq100.py  paths.py  permutation_helpers.py  walkforward_oos_common.py
src/deepvibe_hedge/mad/: __init__.py  backtester.py  live_bot.py  ohlcv_health.py  permutation_test.py  walkforward_oos.py
